--- a/onlineshopping/.project
+++ b/onlineshopping/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Onlineshopping</name>
+	<name>onlineshopping</name>
 	<comment></comment>
 	<projects>
 	</projects>
