--- a/shoppingbackend/.project
+++ b/shoppingbackend/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Shoppingbackend</name>
+	<name>shoppingbackend</name>
 	<comment></comment>
 	<projects>
 	</projects>
